lotsa change in property appraisals

--- a/web/appraisal/templates/appraisal/modals.html
+++ b/web/appraisal/templates/appraisal/modals.html
@@ -18,6 +18,17 @@
   {% include 'appraisal/modals_remove_address.html' %}
 </div>
 
+<div class="modal fade" id="modal_add_property" tabindex="-1" role="dialog" aria-hidden="true">
+  {% include 'appraisal/modals_add_property.html' %}
+</div>
+
+<div class="modal fade" id="modal_edit_property" tabindex="-1" role="dialog" aria-hidden="true">
+  {% include 'appraisal/modals_edit_property.html' %}
+</div>
+
+<div class="modal fade" id="modal_add_apartment" tabindex="-1" role="dialog" aria-hidden="true">
+  {% include 'appraisal/modals_add_apartment.html' %}
+</div>
 
 <div class="modal fade" id="modalExport" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
