--- a/web/apartment/templates/apartment/general.html
+++ b/web/apartment/templates/apartment/general.html
@@ -44,6 +44,9 @@
 </div>
 {% endfor %}
 
+{{forms.apartment.apartment_building}}
+{{forms.apartment.addressNumber2}}
+
 <div class="row">
 	<div class="col-2">
 		<p class="font-weight-bold text-right">Características generales</p>
