--- a/web/appraisal/templates/appraisal/property_list.html
+++ b/web/appraisal/templates/appraisal/property_list.html
@@ -1,12 +1,12 @@
 <div id="property_list_data" data-real_estate_id="{{real_estate.id}}">
 	
 	<div class="row">
-		<div class="col">
+		<div class="col-4">
 	    	<label>
 	      		Propiedades
 	    	</label>
 	  	</div>
-	  	<div class="col text-right">
+	  	<div class="col-8 text-right">
 			<a href="#" id="btn_add_property_modal" style="font-size:0.9em;">
 				Agregar propiedad
 			</a>
