--- a/web/apartment/templates/apartment/general.html
+++ b/web/apartment/templates/apartment/general.html
@@ -49,7 +49,7 @@
 
 <div class="row">
 	<div class="col-2">
-		<p class="font-weight-bold text-right">Características generales</p>
+		<p class="text-right">Características generales</p>
 	</div>
 	<div class="col-2">
 		<div class="form-group">
@@ -81,7 +81,7 @@
 
 <div class="row">
 	<div class="col-2">
-		<p class="font-weight-bold text-right">Superficie</p>
+		<p class="text-right">Superficie</p>
 	</div>
 	<!--
 	{% if realestate.is_house %}
@@ -117,7 +117,7 @@
 
 <div class="row">
 <div class="col-2">
-  <p class="font-weight-bold text-right">{{forms.apartment.generalDescription.label_tag}}</p>
+  <p class="text-right">{{forms.apartment.generalDescription.label_tag}}</p>
 </div>
 <div class="col-6">
   <div class="form-group">
@@ -128,7 +128,7 @@
 
 <div class="row">
 <div class="col-2">
-  <p class="font-weight-bold text-right">{{forms.apartment.programa.label_tag}}</p>
+  <p class="text-right">{{forms.apartment.programa.label_tag}}</p>
 </div>
 <div class="col-6">
   <div class="form-group">
@@ -139,7 +139,7 @@
 
 <div class="row">
 <div class="col-2">
-  <p class="font-weight-bold text-right">{{forms.apartment.estructuraTerminaciones.label_tag}}</p>
+  <p class="text-right">{{forms.apartment.estructuraTerminaciones.label_tag}}</p>
 </div>
 <div class="col-6">
   <div class="form-group">
@@ -152,7 +152,7 @@
 
 <div class="row">
 <div class="col-2">
-  <p class="font-weight-bold text-right">Antecedentes técnico-legales</p>
+  <p class="text-right">Antecedentes técnico-legales</p>
 </div>
 <div class="col-3">
   <div class="form-group">
